2017-11-09  Karl Berry  <karl@freefriends.org>

	* db.c (kpathsea_db_search_list): remove redundant test of `found'.
        From Doug McKenna, personal mail, 7nov17.

2017-11-03  Karl Berry  <karl@freefriends.org>

	* default.h: document that NULL or empty input path returns the
	default string.
	* kdefault.c (kpathsea_expand_default): check for empty input path.
        From Doug McKenna, personal mail, 2nov17.	

	* cnf.c (do_line): do not move past a nul byte on erroneous input
	(with a . but no program name).
	* hash.c: doc fix.
        From Doug McKenna, personal mail, 31oct17.	

2017-10-29  Karl Berry  <karl@freefriends.org>

	* several files: missed copyright 2017 updates.

	* elt-dirs.c (do_subdir): assert must include elt_length>0
	to guarantee the assert of elt[elt_length-1] is valid.
        From Doug McKenna, personal mail, 29oct17.

2017-10-25  Karl Berry  <karl@tug.org>

	* expand.c (brace_expand): do not look past the terminating
	null with bad input like "a{\0whatever".
	From Doug McKenna, personal mail, 23oct17.

2017-09-22  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* tex-file.c: Use a standard API function GetLongPathName()
	instead of the custom kpathsea_getlongpath() (W32 only).

2017-09-20  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* tex-file.c: Fix to return actual file names (W32 only).

2017-09-19  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* db.c: Fix for DOSISH systems in which _WIN32 is not defined.

2017-05-03  Karl Berry  <karl@tug.org>

	* texmf.cnf (TEXMFAUXTREES): new variable (default value empty
	string via empty braces), for tlmgr conf auxtrees.
	(TEXMF): include $TEXMFAUXTREES, but don't assume it is nonempty.

2017-04-22  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* win32lib.c, mingw32.c: Update texlive_gs_init() (w32 only). 

2017-04-21  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* win32lib.c, mingw32.c: Update texlive_gs_init() (w32 only). 

2017-04-14  Karl Berry  <karl@tug.org>
